# RL_RAG_Chatbot

./: .gitignore  README.md  main.py  notebook.ipynb  pyproject.toml  requirements.txt  streamlit_app.py
faiss_index_rl_learn/: index.pkl
